@@ -7,9 +7,8 @@ import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
@@ -58,25 +57,26 @@ public class KeYFile implements EnvInput {
     /**
      * the graphical entity to notify on the state of reading.
      */
-    protected final ProgressMonitor monitor;
+    protected final @Nullable ProgressMonitor monitor;
     private final String name;
     private final Profile profile;
-    protected InitConfig initConfig;
-    private KeyAst.File fileCtx = null;
+    protected @Nullable InitConfig initConfig;
+    private KeyAst.@Nullable File fileCtx = null;
     private @Nullable ProblemFinder problemFinder = null;
     private @Nullable ProblemInformation problemInformation = null;
-    private Includes includes;
+    private @Nullable Includes includes;
 
     /**
      * The FileRepo that will store the files.
      */
-    private FileRepo fileRepo;
+    private @Nullable FileRepo fileRepo;
 
     /**
      * creates a new representation for a given file by indicating a name and a RuleSource
      * representing the physical source of the .key file.
      */
-    public KeYFile(String name, RuleSource file, ProgressMonitor monitor, Profile profile) {
+    public KeYFile(String name, RuleSource file, @Nullable ProgressMonitor monitor,
+            Profile profile) {
         this.name = Objects.requireNonNull(name);
         this.file = Objects.requireNonNull(file);
         this.monitor = monitor;
@@ -118,7 +118,7 @@ public class KeYFile implements EnvInput {
      * @param profile the KeY profile under which the file is to be load
      * @param compressed <code>true</code> iff the file has compressed content
      */
-    public KeYFile(String name, File file, ProgressMonitor monitor, Profile profile,
+    public KeYFile(String name, File file, @Nullable ProgressMonitor monitor, Profile profile,
             boolean compressed) {
         this(name, RuleSourceFactory.initRuleFile(file, compressed), monitor, profile);
     }
@@ -141,27 +141,23 @@ public class KeYFile implements EnvInput {
         this.fileRepo = fileRepo;
     }
 
-    protected InputStream getNewStream() throws FileNotFoundException {
+    protected InputStream getNewStream() throws IOException {
         close();
         if (!file.isAvailable()) {
             throw new FileNotFoundException("File/Resource " + file + " not found.");
         }
         // open a stream to the file (via FileRepo if possible)
-        InputStream input = null;
-        try {
-            if (fileRepo != null) {
-                input = fileRepo.getInputStream(file);
-                // fallback (e.g. used for *.proof.gz files)
-                if (input == null) {
-                    input = file.getNewStream();
-                }
+        if (fileRepo != null) {
+            InputStream input = fileRepo.getInputStream(file);
+            // fallback (e.g. used for *.proof.gz files)
+            if (input == null) {
+                return file.getNewStream();
             } else {
-                input = file.getNewStream();
+                return input;
             }
-        } catch (IOException e) {
-            LOGGER.warn("Failed to open new stream", e);
+        } else {
+            return file.getNewStream();
         }
-        return input;
     }
 
     protected KeyAst.File getParseContext() {
@@ -177,6 +173,7 @@ public class KeYFile implements EnvInput {
     }
 
     protected ProofSettings getPreferences() {
+        assert initConfig != null;
         if (initConfig.getSettings() == null) {
             return readPreferences();
         } else {
@@ -184,7 +181,7 @@ public class KeYFile implements EnvInput {
         }
     }
 
-    public ProofSettings readPreferences() {
+    public @Nullable ProofSettings readPreferences() {
         if (file.isDirectory()) {
             return null;
         }
@@ -215,8 +212,9 @@ public class KeYFile implements EnvInput {
         if (includes == null) {
             try {
                 KeyAst.File ctx = getParseContext();
-                includes =
-                    ctx.getIncludes(file.file().getAbsoluteFile().getParentFile().toURI().toURL());
+                var inc = ctx.getIncludes(file.file().getAbsoluteFile().getParentFile().toURI());
+                includes = inc;
+                return inc;
             } catch (ParseCancellationException e) {
                 throw new ParseCancellationException(e);
             } catch (Exception e) {
@@ -244,7 +242,7 @@ public class KeYFile implements EnvInput {
         return bootClassPathFile;
     }
 
-    protected @NonNull ProblemInformation getProblemInformation() {
+    protected ProblemInformation getProblemInformation() {
         if (problemInformation == null) {
             KeyAst.File ctx = getParseContext();
             problemInformation = ctx.getProblemInformation();
@@ -255,27 +253,21 @@ public class KeYFile implements EnvInput {
 
     @Override
     public @NonNull List<File> readClassPath() {
-        @NonNull
         ProblemInformation pi = getProblemInformation();
         String parentDirectory = file.file().getParent();
         List<File> fileList = new ArrayList<>();
         for (String cp : pi.getClasspath()) {
-            if (cp == null) {
-                fileList.add(null);
-            } else {
-                File f = new File(cp);
-                if (!f.isAbsolute()) {
-                    f = new File(parentDirectory, cp);
-                }
-                fileList.add(f);
+            File f = new File(cp);
+            if (!f.isAbsolute()) {
+                f = new File(parentDirectory, cp);
             }
+            fileList.add(f);
         }
         return fileList;
     }
 
     @Override
     public String readJavaPath() throws ProofInputException {
-        @NonNull
         ProblemInformation pi = getProblemInformation();
         String javaPath = pi.getJavaSource();
         if (javaPath != null) {
@@ -330,6 +322,7 @@ public class KeYFile implements EnvInput {
      * @return list of parser warnings
      */
     public ImmutableSet<PositionedString> readContracts() {
+        assert initConfig != null;
         SpecificationRepository specRepos = initConfig.getServices().getSpecificationRepository();
         ContractsAndInvariantsFinder cinvs =
             new ContractsAndInvariantsFinder(initConfig.getServices(), initConfig.namespaces());
@@ -340,8 +333,9 @@ public class KeYFile implements EnvInput {
         return DefaultImmutableSet.nil();
     }
 
-    protected @NonNull ProblemFinder getProblemFinder() {
+    protected @Nullable ProblemFinder getProblemFinder() {
         if (problemFinder == null) {
+            assert initConfig != null;
             problemFinder = new ProblemFinder(initConfig.getServices(), initConfig.namespaces());
             getParseContext().accept(problemFinder);
         }
@@ -355,6 +349,7 @@ public class KeYFile implements EnvInput {
      */
     public Collection<PositionedString> readSorts() {
         KeyAst.File ctx = getParseContext();
+        assert initConfig != null;
         KeyIO io = new KeyIO(initConfig.getServices(), initConfig.namespaces());
         io.evalDeclarations(ctx);
         ChoiceInformation choice = getParseContext().getChoices();
@@ -376,6 +371,7 @@ public class KeYFile implements EnvInput {
             return null;
         }
         KeyAst.File ctx = getParseContext();
+        assert initConfig != null;
         KeyIO io = new KeyIO(initConfig.getServices(), initConfig.namespaces());
         io.evalFuncAndPred(ctx);
         return io.getWarnings().stream().map(BuildingIssue::asPositionedString).toList();
@@ -390,6 +386,7 @@ public class KeYFile implements EnvInput {
      */
     public List<BuildingIssue> readRules() {
         KeyAst.File ctx = getParseContext();
+        assert initConfig != null;
         TacletPBuilder visitor = new TacletPBuilder(initConfig.getServices(),
             initConfig.namespaces(), initConfig.getTaclet2Builder());
         ctx.accept(visitor);
@@ -418,9 +415,9 @@ public class KeYFile implements EnvInput {
         return issues.stream().map(w -> {
             try {
                 return new PositionedString(w.message(),
-                    new Location(file != null ? new URL(file.getExternalForm()).toURI() : null,
+                    new Location(file != null ? new URI(file.getExternalForm()) : null,
                         w.position()));
-            } catch (MalformedURLException | URISyntaxException e) {
+            } catch (URISyntaxException e) {
                 throw new RuntimeException(e);
             }
         })
@@ -443,7 +440,7 @@ public class KeYFile implements EnvInput {
 
 
     @Override
-    public boolean equals(Object o) {
+    public boolean equals(@org.jspecify.annotations.Nullable Object o) {
         if (o == null || o.getClass() != this.getClass()) {
             return false;
         }
